small fixes and updates based on feedback

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -34,7 +34,7 @@
               <img class="usa-footer__logo-img" src="../../../assets/images/fcl-bell-color.png" alt="Footer Logo"/>
             </div>
             <div class="mobile-lg:grid-col-auto">
-              <p class="usa-footer__logo-heading">Forest City Lodge #388</p>
+              <p class="usa-footer__logo-heading">Forest City Lodge No. 388</p>
             </div>
           </div>
           <div class="usa-footer__contact-links mobile-lg:grid-col-6">
