--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -6,8 +6,8 @@
                 <em class="usa-logo__text">
                     <a class="navbar-brand" href="/home" title="FCL 388" class="d-flex align-items-center">
                         <img id="navbar-image" src="../../../assets/images/fcl-bell-color.png" class="me-3">
-                        <h1 class="p-0 m-0 d-block d-sm-none primary-title-small">Forest City Lodge #388</h1>
-                        <h1 class="p-0 m-0 d-none d-sm-block primary-title">Forest City Lodge #388</h1>
+                        <h1 class="p-0 m-0 d-block d-sm-none primary-title-small">Forest City Lodge No. 388</h1>
+                        <h1 class="p-0 m-0 d-none d-sm-block primary-title">Forest City Lodge No. 388</h1>
                     </a>
                 </em>
             </div>
@@ -97,26 +97,26 @@
                             <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
                                     <li class="usa-nav__submenu-item">
-                                        <a href="http://www.uhlodge.org/" target="_blank" rel="noopener noreferrer">University Heights Lodge #738</a>
+                                        <a href="http://www.uhlodge.org/" target="_blank" rel="noopener noreferrer">University Heights Lodge No. 738</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a href="http://www.eastgate796.com/" target="_blank" rel="noopener noreferrer">Eastgate Lodge #796</a>
+                                        <a href="http://www.eastgate796.com/" target="_blank" rel="noopener noreferrer">East Gate Lodge No. 796</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a href="http://www.eastgate796.com/windermere/" target="_blank" rel="noopener noreferrer">Order of the Eastern Star, Windermere Chapter #388</a>
+                                        <a href="http://www.eastgate796.com/windermere/" target="_blank" rel="noopener noreferrer">Order of the Eastern Star, Windermere Chapter No. 388</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
                                     <li class="usa-nav__submenu-item">
-                                        <a href="http://www.eastgate796.com/heights206/" target="_blank" rel="noopener noreferrer">Heights Chapter #206, R.A.M.</a>
+                                        <a href="http://www.eastgate796.com/heights206/" target="_blank" rel="noopener noreferrer">Heights Chapter No. 206, R.A.M.</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a href="http://www.eastgate796.com/woodward118/" target="_blank" rel="noopener noreferrer">Woodward Council #118, R.&.S.M</a>
+                                        <a href="http://www.eastgate796.com/woodward118/" target="_blank" rel="noopener noreferrer">Woodward Council No. 118, R.&.S.M</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a href="http://www.eastgate796.com/coeurdelion/" target="_blank" rel="noopener noreferrer">Coeur De Lion Commandery #64, K.T.</a>
+                                        <a href="http://www.eastgate796.com/coeurdelion/" target="_blank" rel="noopener noreferrer">Coeur De Lion Commandery No. 64, K.T.</a>
                                     </li>
                                 </ul>
                             </div>
