--- a/src/app/forest-city/about-us/about-us.component.html
+++ b/src/app/forest-city/about-us/about-us.component.html
@@ -5,10 +5,10 @@
         </div>
         <div class="grid-col-8">
             <p>
-                Forest City Lodge #388 is one of Northeast Ohio’s oldest, largest, and most active Masonic lodges.
+                Forest City Lodge No. 388 is one of Northeast Ohio’s oldest, largest, and most active Masonic lodges.
             </p>
             <p>
-                Located in Lyndhurst, a suburb of Cleveland, Ohio at the Lyndhurst Masonic Center, Forest City Lodge #388 was chartered October 16th, 1867.
+                Located in Lyndhurst, a suburb of Cleveland, Ohio at the Lyndhurst Masonic Center, Forest City Lodge No. 388 was chartered October 16th, 1867.
             </p>
             <p>
                 We meet on the 1st and 3rd Wednesdays of the month, with the exception of July and August.
