--- a/src/app/forest-city/our-history/history.component.html
+++ b/src/app/forest-city/our-history/history.component.html
@@ -2,7 +2,7 @@
     <div class="bg-secondary-lighter primary-content">
         <div class="bg-primary-lighter pt-2 pb-2">
             <div class="grid-col-12 centered">
-                <h2>A Brief History of Forest City Lodge #388</h2>
+                <h2>A Brief History of Forest City Lodge No. 388</h2>
                 <h3>Free & Accepted Masons, Ohio</h3>
             </div>
         </div>
