--- a/src/app/forest-city/past-masters/past-masters.component.html
+++ b/src/app/forest-city/past-masters/past-masters.component.html
@@ -1,6 +1,6 @@
 <div class="bg-primary-lighter pt-2 pb-2">
     <div class="grid-col-12 centered">
-        <h2 >Past Masters of Forest City Lodge #388</h2>
+        <h2 >Past Masters of Forest City Lodge No. 388</h2>
     </div>
 </div>
 <br>
