--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,15 @@ $theme-image-path: '~uswds/src/img';
     src: local("Fredericka"), url(./assets/fonts/Fredericka_the_Great/FrederickatheGreat-Regular.ttf) format("truetype");
 }
 
+@font-face {
+    font-family: "Cinzel";
+    src: local("Cinzel"), url(./assets/fonts/Cinzel/static/Cinzel-Medium.ttf) format("truetype");
+}
+
+@font-face {
+    font-family: "Aref Ruquaa";
+    src: local("Aref Ruquaa"), url(./assets/fonts/Aref_Ruqaa/ArefRuqaa-Regular.ttf) format("truetype");
+}
 
 h1,h2,h3 {
     font-family: Fredericka !important;
