cleanup, and alt text for photos

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -77,15 +77,18 @@
                                         <a href="http://www.freemason.com" target="_blank" rel="noopener noreferrer">Grand Lodge of Ohio F&AMP;AM</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a href="http://www.ohiodistrict22.org" target="_blank" rel="noopener noreferrer">22nd Masonic District of Ohio</a>
+                                        <a href="https://www.freemason.com/grand-lodge-of-ohio-member-center/" target="_blank">Ohio Grand View</a>
                                     </li>
                                     <li class="usa-nav__submenu-item">
-                                        <a href="http://www.ohioram.org" target="_blank" rel="noopener noreferrer">Grand Chapter Royal Arch Masons of Ohio</a>
+                                        <a href="http://www.ohiodistrict22.org" target="_blank" rel="noopener noreferrer">22nd Masonic District of Ohio</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="usa-col">
                                 <ul class="usa-nav__submenu-list">
+                                    <li class="usa-nav__submenu-item">
+                                        <a href="http://www.ohioram.org" target="_blank" rel="noopener noreferrer">Grand Chapter Royal Arch Masons of Ohio</a>
+                                    </li>
                                     <li class="usa-nav__submenu-item">
                                         <a href="https://scottishritenmj.org/" target="_blank" rel="noopener noreferrer">Ancient Accepted Scottish Rite, Northern Masonic Jurisdiction</a>
                                     </li>
