--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -7,7 +7,7 @@
             {{alert.text}}
           </p>
           <button class="usa-button usa-button--unstyled dismiss-button" (click)="dismiss()">
-            <img src="close.svg" role="img" alt="Close">
+            <img src="../../../assets/images/close.svg" role="img" alt="Close">
           </button>
         </div>
     </div>
