--- a/src/app/forest-city/our-history/history.component.html
+++ b/src/app/forest-city/our-history/history.component.html
@@ -15,7 +15,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-10 grid-row">
                         <div class="col-xs-12 col-md-6 p-2 d-flex align-items-center justify-content-center">
                             <figure>
-                                <img src={{event.imageSrc}}/>
+                                <img src={{event.imageSrc}} alt="{{event.altText}}" title="Courtesy {{event.altText}}"/>
                                 <figcaption class="centered">{{event.imageCaption}}</figcaption>
                             </figure>
                         </div>
