--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -27,7 +27,7 @@
     <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div *ngFor="let event of events, let i = index" class="carousel-item" [ngClass]="{'active': i === 0}" data-bs-interval="10000">
-            <div class="d-flex bg-ink align-items-center justify-content-end flex-column" style="background-image: url('{{event.spotlightImage}}');background-size: cover;background-repeat: no-repeat;min-height: 50vw; background-position: bottom">
+            <div class="d-flex bg-ink align-items-center justify-content-end flex-column" style="background-image: url('{{event.spotlightImage}}');background-size: cover;background-repeat: no-repeat;min-height: 50vw; background-position: bottom" title="{{event.altText}}">
                 <div class="event-highlight-name text-white centered">{{event.name}}</div>
                 <div *ngIf="event.description" class="event-highlight-description text-white centered">{{event.description}}</div>
                 <div class="event-highlight-date fs-4 text-white centered"> {{ event.date | date:'fullDate' }} {{ event.date | date:'shortTime' }} </div>
