--- a/src/app/forest-city/our-officers/our-officers.component.html
+++ b/src/app/forest-city/our-officers/our-officers.component.html
@@ -12,8 +12,8 @@
                         <div class="tablet:grid-col-10 usa-card usa-card--flag">
                             <div class="usa-card__container fcl-card-container">
                                 <header class="usa-card__header">
-                                    <h2 class="usa-card__heading"> {{ officer.name }} </h2>
-                                    <h3 class="usa-card__heading"> {{ officer.office }} </h3>
+                                    <h2 class="usa-card__heading text-bold"> {{ officer.name }} </h2>
+                                    <h3 class="usa-card__heading text-bold"> {{ officer.office }} </h3>
                                 </header>
                                 <div class="usa-card__media">
                                     <div  class="usa-card__img d-flex justify-content-center">
