--- a/src/app/forest-city/past-masters/past-masters.component.html
+++ b/src/app/forest-city/past-masters/past-masters.component.html
@@ -9,7 +9,7 @@
         <div class="grid-col usa-card">
             <div class="usa-card__container fclCardContainer">
                 <header class="usa-card__header bg-primary-lighter fclCardHeader">
-                    <h2 class="usa-card__heading centered"> {{ master.name }} </h2>
+                    <h2 class="usa-card__heading centered text-bold"> {{ master.name }} </h2>
                 </header>
                 <div class="fclCardHeaderLine"></div>
                 <div class="centered">
