fixed header class

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -7,7 +7,7 @@
                     <a class="navbar-brand" href="/home" title="FCL 388" class="d-flex align-items-center">
                         <img id="navbar-image" src="../../../assets/images/fcl-bell-color.png" class="bell-logo me-3">
                         <h1 class="p-0 m-0 d-block d-sm-none primary-title-small text-white">Forest City Lodge No. 388</h1>
-                        <h1 class="p-0 m-0 d-block d-sm-block primary-title text-white">Forest City Lodge No. 388</h1>
+                        <h1 class="p-0 m-0 d-none d-sm-block primary-title text-white">Forest City Lodge No. 388</h1>
                     </a>
                 </em>
             </div>
