--- a/src/app/forest-city/future-events/rsvp/rsvp.component.html
+++ b/src/app/forest-city/future-events/rsvp/rsvp.component.html
@@ -44,7 +44,7 @@
                                 [class.is-invalid] = "rsvpForm.get('email')?.invalid && rsvpForm.get('email')?.dirty"
                                 required>
                         </div>
-                        <div *ngIf="event.earlyBirdOptions.cost" class="mb-3">
+                        <div class="mb-3">
                             <div class="usa-checkbox">
                                 <input id="early-bird-dinner"
                                     type="checkbox"
