updated rsvp early bird dinner info

--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -41,9 +41,10 @@
             </div>
             <div class="col-md-12 col-lg-4">
                 <div class="border-rounded p-3 bg-gray-5 mb-3">
-                    <div class="fs-6 text-align-center mb-2">Early Bird Dinners are at 6:30pm</div>
+                    <div class="fs-6 text-align-center mb-2">Early Bird Dinners are at 6:30pm, unless otherwise noted</div>
+                    <div class="fs-6 text-align-center mb-2">Events without Early Bird Dinners will not have a checkbox when RSVPing</div>
+                    <div class="fs-6 text-align-center mb-2">Please note: Reservations are required for all meals</div>
                     <div class="fs-6 text-align-center mb-2">Stated Meetings are at 7:30pm</div>
-                    <div class="fs-6 text-align-center">Please note: Reservations are required for all meals</div>
                 </div>
                 <div div class="border-rounded p-3 bg-gray-5">
                     <div div class="d-flex align-items-center justify-content-center">
