updated RSVP verbiage

--- a/src/app/forest-city/future-events/rsvp/rsvp.component.html
+++ b/src/app/forest-city/future-events/rsvp/rsvp.component.html
@@ -53,7 +53,7 @@
                                     [checked]="earlyBirdChecked"
                                     (click)="toggleChecked()"
                                     value="earlyBirdChecked">
-                                <label class="usa-checkbox__label" for="early-bird-dinner">Early Bird Dinner {{ event.earlyBirdOptions.time }}</label>
+                                <label class="usa-checkbox__label" for="early-bird-dinner">Will Attend Dinner {{ event.earlyBirdOptions.time }}</label>
                             </div>
                             <div *ngIf="earlyBirdChecked">
                                 <label class="usa-label" for="numberOfMeals">Number of Meals:</label>
