--- a/src/app/forest-city/image-gallery/image-gallery.component.scss
+++ b/src/app/forest-city/image-gallery/image-gallery.component.scss
@@ -5,7 +5,7 @@ body {
 .wrap {
   margin:50px auto 50px auto;
   width:100%;
-  display:flex;
+  display:grid;
   align-items:space-around;
   max-width:1200px;
 }
