--- a/src/app/forest-city/future-events/future-events.component.html
+++ b/src/app/forest-city/future-events/future-events.component.html
@@ -12,6 +12,7 @@
                         <div class="bg-gray-5 px-3 py-4 flex-shrink-0" style="width: 135px;">
                             <div class="fs-5">{{getDate(event.date)}}</div>
                             <div class="fs-6">{{getTime(event.date)}}</div>
+                            <div class="fs-6">{{getTyled(event.tyled)}}</div>
                         </div>
                         <div class="d-flex bg-white p-3 pb-1 flex-grow-1 align-items-center justify-content-between flex-wrap">
                             <div class="mb-2">
