image gallery added, needs finesse

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -35,6 +35,7 @@
             </div>
             <div class="mobile-lg:grid-col-auto">
               <p class="usa-footer__logo-heading">Forest City Lodge No. 388</p>
+              <p class="usa-footer__logo-heading">F&AM Ohio</p>
             </div>
           </div>
           <div class="usa-footer__contact-links mobile-lg:grid-col-6">
