--- a/src/app/forest-city/recruiting/recruiting.component.html
+++ b/src/app/forest-city/recruiting/recruiting.component.html
@@ -31,4 +31,9 @@
             </p>
         </div>
     </div>
+    <div class="row padding-top-4 text-center">
+        <div class="desktop:grid-col-12">
+            <img src="../../../assets/images/OhioFreemasonry-Mark-Blue_2_.png">
+        </div>
+    </div>
 </div>
