--- a/src/app/forest-city/image-gallery/gallery-collection/gallery-collection.component.scss
+++ b/src/app/forest-city/image-gallery/gallery-collection/gallery-collection.component.scss
@@ -1,123 +1,36 @@
-.image-row {
-  display: grid;
-  // flex-wrap: wrap;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: minmax(150px, auto);
-}
-.image-row > .image-column {
-  padding: 5px 10px;
-}
-.image-row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.image-column {
-  float: left;
+.ngx-gallery { display: inline-block; margin-bottom: 20px; }
+
+.row {
   display: flex;
-  flex-flow: column wrap;
-  // width: 25%;
-}
-img {
-  width: 100%;
-  border-radius: 8px;
-}
-.slide-modal {
-  display: none;
-  position: fixed;
-  z-index: 999;
-  padding-top: 10px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: #000000;
-}
-.slide-modal-content {
-  position: relative;
-  margin: auto;
-  padding: 0;
-  width: auto;
-  height: 100vh;
-  max-width: fit-content;
-}
-.slide-modal-content .image-column {
-  padding: 0;
-}
-.close {
-  color: white;
-  position: absolute;
-  top: 10px;
-  right: 25px;
-  font-size: 35px;
-  font-weight: bold;
-}
-.close:hover,
-.close:focus {
-  color: #888888;
-  text-decoration: none;
-  cursor: pointer;
-}
-.img-slides {
-  display: none;
-}
-.img-slides img {
-  width: auto;
-  height: 100vh;
-}
-.cursor {
-  cursor: pointer;
-}
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 15%;
-  width: auto;
-  padding: 18px;
-  // margin-top: -50px;
-  color: white !important;
-  font-weight: bold;
-  font-size: 20px;
-  transition: 0.8s ease;
-  border-radius: 0 5px 5px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-img {
-  margin-bottom: -4px;
-}
-.images {
-  opacity: 0.7;
-}
-.active,
-.images:hover {
-  opacity: 1;
-}
-img.hover-shadow {
-  transition: 0.3s;
-}
-.hover-shadow:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  flex-wrap: wrap;
+  padding: 0 4px;
 }
 
-@media (max-width: 600px) {
-  .image-row {
-    grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
-  }
+/* Create four equal columns that sits next to each other */
+.column {
+  flex: 25%;
+  max-width: 14%;
+  padding: 0 4px;
 }
-@media (max-width: 400px) {
-  .image-row {
-    grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
   }
 }
 
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
