updated rsvp to not display x number of days before event

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -32,6 +32,7 @@
                 <div *ngIf="event.description" class="event-highlight-description text-white centered">{{event.description}}</div>
                 <div class="event-highlight-date fs-4 text-white centered"> {{ cleanDate(event.date) | date:'fullDate' }} {{ cleanDate(event.date) | date:'shortTime' }} </div>
                 <button class="usa-button usa-button--outline usa-button--inverse usa-button--unstyled fs-4 mb-3"
+                    *ngIf="isRsvp(event)"
                     aria-controls="rsvpModal"
                     (click)="setEventForRsvp(event)"
                     data-bs-toggle="modal"
