made lightbox bigger

--- a/src/app/forest-city/image-gallery/gallery-collection/gallery-collection.component.scss
+++ b/src/app/forest-city/image-gallery/gallery-collection/gallery-collection.component.scss
@@ -42,3 +42,10 @@
   height: 100%;
   width: 100%;
 }
+
+lightbox {
+  height: 98vh !important;
+  width: 98vw !important;
+  max-height: 98vh !important;
+  max-width: 98vw !important;
+}
